# mini_models

./: .gitignore  README.md  prompts.md  pyproject.toml  requirements.txt  setup.py
docs/: development.md  index.md  maintenance.md  release.md  testing.md  usage.md
examples/: weight_management_demo.py
examples/diffusion/: generate_mnist.py  train_dit_mnist.py
examples/inference/: infer_mnist.py
examples/training/: train_mnist.py
mini_models/: __init__.py  config.py  version.py
mini_models/datasets/: __init__.py  mnist.py
mini_models/deployment/: __init__.py  precision.py  quantization.py
mini_models/evaluation/: __init__.py  evaluator.py
mini_models/models/: __init__.py  base.py  register.py
mini_models/models/vision/: __init__.py  mnist_model.py  resnet.py
mini_models/models/vision/diffusion/: __init__.py  diffusion_process.py  dit_block.py  dit_model.py  time_embedding.py
mini_models/train/: __init__.py  trainer.py
mini_models/weights/: __init__.py  downloader.py  manager.py  registry.py
release/: model_info.json  model_info.yaml  release_notes_v0.1.md
tests/: linear_layer_finder.py  model.py  test_dag_build.py  test_dit_model.py  test_import.py
tools/: batch_config_example.yaml  prepare_release.py  release_to_github.py  release_tools.md  version_manager.py
