[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py37']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=mini_models"
testpaths = ["tests"]

[tool.coverage.run]
source = ["mini_models"]
omit = ["tests/*", "setup.py"]
